# universal-copilot-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
backend/: Dockerfile
backend/universal_copilot/: cli.py  main.py  settings.py
backend/universal_copilot/api/: router.py  routes_health.py  routes_support.py
backend/universal_copilot/auth/: middleware.py
backend/universal_copilot/crew/: base_crew.py  registry.py  support_crew.py  tools.py
backend/universal_copilot/db/: models.py  session.py
backend/universal_copilot/llm/: gateway.py
backend/universal_copilot/llm/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  watsonx_provider.py
backend/universal_copilot/mcp_host/: client.py  server.py
backend/universal_copilot/rag/: indexes.py  ingestion.py  vector_client.py
backend/universal_copilot/schemas/: hr.py  legal.py  support.py
config/: base.yaml  dev.yaml  prod.yaml
config/tenants/: example-tenant-a.yaml  example-tenant-eu-regulated.yaml  example-tenant-global-saas.yaml  example-tenant-healthcare.yaml
config/use_cases/: dev_it.yaml  documents.yaml  finance.yaml  hr.yaml  knowledge.yaml  legal.yaml  marketing.yaml  sales.yaml  support.yaml  vertical_healthcare.yaml
docs/: architecture-overview.md  crewai-agents-crews.md  governance-watsonx.md  langflow-flows.md  mcp-architecture.md
docs/user-cases/: 01-support-copilot.md  02-knowledge-copilot.md  03-dev-it-copilot.md  04-marketing-studio.md  05-finance-insights.md  06-document-automation.md  07-sales-copilot.md  08-hr-learning-copilot.md  09-legal-risk-copilot.md  10-vertical-healthcare-copilot.md  README.md
flows/dev_it/: code_rag.flow.json  it_kb_rag.flow.json
flows/documents/: claims_extraction.flow.json  invoice_extraction.flow.json
flows/finance/: finance_docs_rag.flow.json  nl_to_sql.flow.json
flows/hr/: cv_matching.flow.json  hr_policy_rag.flow.json
flows/knowledge/: knowledge_rag.flow.json
flows/legal/: contract_review.flow.json  regulation_rag.flow.json
flows/marketing/: marketing_content.flow.json
flows/sales/: call_summary.flow.json  sales_email.flow.json
flows/support/: support_escalation.flow.json  support_rag.flow.json
flows/vertical_healthcare/: note_drafting.flow.json  patient_history.flow.json  protocol_rag.flow.json
frontend/admin-console/src/: App.tsx  main.tsx
frontend/admin-console/src/api/: tenants.ts
frontend/admin-console/src/pages/: ProvidersPage.tsx  TenantsPage.tsx  UseCasesPage.tsx
frontend/admin-console/src/styles/: global.css
frontend/widgets/knowledge-search-widget/src/: KnowledgeSearch.tsx
frontend/widgets/support-chat-widget/src/: SupportChat.tsx  embed.js
infra/helm/: Chart.yaml  values.yaml
infra/helm/templates/: _helpers.tpl  backend.yaml
infra/k8s/: mcp-context-forge-deployment.yaml  mcp-context-forge-service.yaml  namespace.yaml  stack.yaml
infra/nginx/: nginx.conf
infra/openshift/: backend-route.yaml
mcp/config/: context-forge-virtual-server.yaml
mcp/servers/: crm_server.py  hris_server.py  langflow_tools_server.py  legal_docs_server.py
scripts/: import_flows_to_langflow.py  init_dev_data.py  install.sh  load_demo_documents.py
tests/: __init__.py  conftest.py  test_example_api.py  test_example_llm_gateway.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_settings.py
