[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "universal-copilot-platform"
version = "1.0.0"
description = "🚀 World-Class Enterprise AI Copilot Platform - Multi-Tenant, Multi-LLM, Production-Ready"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ruslan Magana", email = "contact@ruslanmv.com" },
]
maintainers = [
  { name = "Ruslan Magana", email = "contact@ruslanmv.com" },
]
keywords = [
  "ai",
  "copilot",
  "multi-tenant",
  "crewai",
  "langflow",
  "mcp",
  "llm",
  "rag",
  "enterprise",
  "openai",
  "anthropic",
  "watsonx",
  "autonomous-agents",
  "async",
  "fastapi",
  "production-ready",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Framework :: FastAPI",
  "Framework :: Pydantic",
  "Framework :: Pytest",
  "Typing :: Typed",
  "Environment :: Console",
]

dependencies = [
  # Web API Framework - Production-grade async web framework
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",

  # Configuration & Validation - Type-safe configuration with Pydantic V2
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "pyyaml==6.0.2",

  # Database & ORM - Async SQLAlchemy with PostgreSQL
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",

  # HTTP Client - Modern async HTTP with HTTP/2 support
  "httpx[http2]==0.28.1",

  # AI & Multi-Agent Orchestration - Multi-agent workflows
  "openai==1.57.4",
  "anthropic==0.40.0",
  "crewai[tools]==0.86.0",

  # MCP & Streaming - WebSocket and SSE support
  "websockets==14.1",
  "sse-starlette==2.2.1",

  # CLI Interface - Beautiful terminal UX with Typer + Rich
  "typer[all]==0.15.1",
  "rich==13.9.4",
  "click==8.1.7",

  # Logging & Observability - Structured JSON logging
  "loguru==0.7.3",
  "python-json-logger==3.2.1",

  # Utilities - Environment variables, retries, etc.
  "python-dotenv==1.0.1",
  "tenacity==9.0.0",
]

[project.optional-dependencies]
# Development tools - Testing, linting, type checking
dev = [
  # Testing framework
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "pytest-mock==3.14.0",
  "pytest-xdist==3.6.1",  # Parallel test execution
  "pytest-timeout==2.3.1",  # Test timeout handling
  "httpx==0.28.1",  # For testing HTTP clients
  "faker==33.1.0",  # Generate test data

  # Code quality & linting
  "ruff==0.8.4",  # Fast all-in-one linter & formatter
  "mypy==1.13.0",  # Static type checker
  "pre-commit==4.0.1",  # Git hooks framework

  # Security scanning
  "bandit[toml]==1.8.0",  # Security vulnerability scanner
  "safety==3.2.11",  # Dependency vulnerability checker

  # Type stubs for better type checking
  "types-pyyaml==6.0.12.20240917",
  "types-python-dateutil==2.9.0.20241206",

  # Development utilities
  "ipython==8.31.0",  # Enhanced REPL
  "ipdb==0.13.13",  # Debugger
]

# IBM watsonx.ai support
watsonx = [
  "ibm-watsonx-ai==1.1.21",
  "ibm-cloud-sdk-core==3.22.2",
]

# All optional dependencies
all = [
  "universal-copilot-platform[dev,watsonx]",
]

[project.urls]
Homepage = "https://ruslanmv.com"
Documentation = "https://github.com/ruslanmv/universal-copilot-platform#readme"
Repository = "https://github.com/ruslanmv/universal-copilot-platform"
Issues = "https://github.com/ruslanmv/universal-copilot-platform/issues"
Changelog = "https://github.com/ruslanmv/universal-copilot-platform/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/ruslanmv/universal-copilot-platform/issues"
"Source Code" = "https://github.com/ruslanmv/universal-copilot-platform"

[project.scripts]
universal-copilot = "backend.universal_copilot.cli:main"
ucp = "backend.universal_copilot.cli:main"

# =============================================================================
# UV CONFIGURATION - Lightning-fast dependency resolution
# =============================================================================
[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.1",
  "pytest-timeout>=2.3.1",
  "ruff>=0.8.4",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1",
  "bandit[toml]>=1.8.0",
  "safety>=3.2.11",
  "ipython>=8.31.0",
]

# UV package sources configuration
[tool.uv.sources]

# UV workspace configuration for monorepo (future use)
[tool.uv.workspace]
members = []

# =============================================================================
# HATCH BUILD CONFIGURATION
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = [
  "/backend",
  "/config",
  "/flows",
  "/mcp",
  "/scripts",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/pyproject.toml",
]

# =============================================================================
# RUFF CONFIGURATION - Aggressive linting for world-class code quality
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".git",
  ".venv",
  ".uv",
  "__pycache__",
  "*.pyc",
  "build",
  "dist",
  ".eggs",
  "*.egg-info",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  "node_modules",
]

# Show fixes in output
show-fixes = true
# Show source code in output
show-source = true

[tool.ruff.lint]
# Enable comprehensive rule sets for maximum code quality
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort - import sorting
  "N",      # pep8-naming
  "UP",     # pyupgrade - upgrade syntax for newer Python
  "ANN",    # flake8-annotations - type annotations
  "ASYNC",  # flake8-async - async best practices
  "S",      # flake8-bandit - security issues
  "BLE",    # flake8-blind-except
  "FBT",    # flake8-boolean-trap
  "B",      # flake8-bugbear - common bugs
  "A",      # flake8-builtins - shadowing builtins
  "COM",    # flake8-commas
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez - timezone aware datetimes
  "T10",    # flake8-debugger - no debugger statements
  "DJ",     # flake8-django
  "EM",     # flake8-errmsg - error message best practices
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "ISC",    # flake8-implicit-str-concat
  "ICN",    # flake8-import-conventions
  "LOG",    # flake8-logging
  "G",      # flake8-logging-format
  "INP",    # flake8-no-pep420 - require __init__.py
  "PIE",    # flake8-pie - misc lints
  "T20",    # flake8-print - no print statements
  "PYI",    # flake8-pyi - type stub best practices
  "PT",     # flake8-pytest-style
  "Q",      # flake8-quotes
  "RSE",    # flake8-raise
  "RET",    # flake8-return
  "SLF",    # flake8-self - private member access
  "SLOT",   # flake8-slots
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "TCH",    # flake8-type-checking
  "INT",    # flake8-gettext
  "ARG",    # flake8-unused-arguments
  "PTH",    # flake8-use-pathlib - use pathlib over os.path
  "TD",     # flake8-todos
  "FIX",    # flake8-fixme
  "ERA",    # eradicate - commented out code
  "PD",     # pandas-vet
  "PGH",    # pygrep-hooks
  "PL",     # pylint
  "TRY",    # tryceratops - exception handling
  "FLY",    # flynt - string formatting
  "NPY",    # numpy-specific rules
  "PERF",   # perflint - performance anti-patterns
  "FURB",   # refurb - modernize code
  "RUF",    # ruff-specific rules
]

ignore = [
  "ANN101",  # Missing type annotation for self
  "ANN102",  # Missing type annotation for cls
  "ANN401",  # Dynamically typed expressions (Any) are disallowed - too strict for production
  "TRY003",  # Avoid specifying long messages outside exception class - common pattern
  "PLR0913", # Too many arguments - sometimes necessary
  "PLR2004", # Magic value used in comparison - sometimes clear in context
  "TD002",   # Missing TODO author - not critical
  "TD003",   # Missing TODO link - not critical
  "FIX002",  # Line contains TODO - not critical
  "S101",    # Use of assert - OK for type narrowing
  "COM812",  # Trailing comma missing - conflicts with formatter
  "ISC001",  # Implicit string concatenation - conflicts with formatter
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude certain rules in specific files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403"]  # Allow unused imports and import order
"tests/**/*.py" = [
  "ANN",     # No type annotations required in tests
  "ARG",     # Unused function arguments OK in tests
  "FBT",     # Boolean trap OK in tests
  "PLR2004", # Magic values OK in tests
  "S101",    # Assert OK in tests
  "S105",    # Hardcoded password OK in tests
  "S106",    # Hardcoded password OK in tests
  "SLF001",  # Private member access OK in tests
]
"scripts/**/*.py" = [
  "T20",     # Print statements OK in scripts
  "INP001",  # Implicit namespace package OK in scripts
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "universal_copilot"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

# =============================================================================
# MYPY CONFIGURATION - Strict type checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true

# Error on missing imports
ignore_missing_imports = false
# Follow imports to type check dependencies
follow_imports = "normal"

# Show error codes
show_error_codes = true
show_error_context = true
# Pretty output
pretty = true

# Cache directory
cache_dir = ".mypy_cache"

# Plugins
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "crewai.*",
  "langflow.*",
  "ibm_watsonx_ai.*",
  "ibm_cloud_sdk_core.*",
  "loguru.*",
  "typer.*",
  "uvicorn.*",
  "sse_starlette.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# =============================================================================
# PYTEST CONFIGURATION - Comprehensive testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",                          # Show summary of all test outcomes
  "-q",                           # Quiet output
  "--strict-markers",             # Error on unknown markers
  "--strict-config",              # Error on config issues
  "--cov=backend",                # Coverage for backend
  "--cov-report=term-missing",    # Show missing lines in terminal
  "--cov-report=html",            # Generate HTML report
  "--cov-report=xml",             # Generate XML report for CI
  "--cov-fail-under=80",          # Fail if coverage < 80%
  "--tb=short",                   # Shorter traceback format
  "--maxfail=3",                  # Stop after 3 failures
  "-vv",                          # Very verbose
  "--color=yes",                  # Colored output
  "--code-highlight=yes",         # Syntax highlighting
  "--dist=loadgroup",             # Distribute tests by file
  "--numprocesses=auto",          # Auto-detect CPU cores for parallel tests
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Custom markers for organizing tests
markers = [
  "unit: Unit tests (fast, isolated)",
  "integration: Integration tests (require services)",
  "e2e: End-to-end tests (full stack)",
  "slow: Slow tests (> 1s)",
  "smoke: Smoke tests for quick validation",
]

# =============================================================================
# COVERAGE CONFIGURATION - Track test coverage
# =============================================================================
[tool.coverage.run]
source = ["backend"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/venv/*",
  "*/.venv/*",
  "*/.uv/*",
  "*/site-packages/*",
  "*/__main__.py",
]
branch = true
parallel = true
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@abstractmethod",
  "@abc.abstractmethod",
  "class .*\\bProtocol\\):",
  "@overload",
  "assert_never",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# BANDIT CONFIGURATION - Security scanning
# =============================================================================
[tool.bandit]
targets = ["backend"]
exclude_dirs = ["tests", ".venv", ".uv", "build", "dist"]
skips = [
  "B101",  # assert_used - OK for type narrowing
  "B601",  # paramiko_calls - not using paramiko
]

# =============================================================================
# BLACK COMPATIBILITY - Ruff formatter is Black-compatible
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
